css/shanti-search.css
/* ... */
.view-section .fancytree-node .ajax-progress{ position:absolute; right:0.1rem; background:transparent;padding-right:1rem;}
.view-section .fancytree-node.fancytree-has-children .ajax-progress{ position:absolute; right:0.1rem;}


.view-section .fancytree-title a{ color:#444;}
.view-section .fancytree-title a:hover,
.view-section .fancytree-title a:active{ color:#111;}
	
	

.view-section .fancytree-title{
	color:#444;
	margin:0 0 0 -24px;
	padding-left:15px;
	line-height:1.68em;
	height:1.62em;
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
  box-sizing: content-box;
}
.view-section .fancytree-title:hover,
.view-section .fancytree-title:active{ color:#111;/*background:#fff;*/}
.view-section .fancytree-title::before{
	background: #fff;
	color:transparent;
	font-family: 'shanticon';
	content: '\e625';
	font-size: 1em;
	float:left;
	position:relative; top:0.6rem; right:0.2rem;
  border-radius: 50%;
  background-clip: padding-box;
  width: 9px;
  height: 9px;
  display: block;
  margin-right:7px;
  -webkit-box-shadow:0 0 2px 1px #aaa;
  box-shadow:0 0 2px 1px #aaa;
  border-collapse: separate;
}
.view-section .fancytree-title:hover::before {
    background: #777; -webkit-box-shadow:none; box-shadow:none;
}
.view-section .fancytree-statusnode-wait .fancytree-title::before,
.view-section .fancytree-statusnode-error .fancytree-title::before{
  width:0;
  height:0;
  display: none;
  color:transparent;
  -webkit-box-shadow:none;
  box-shadow:none;
  background:transparent;
}
.view-section .fancytree-has-children>span.fancytree-title {
    padding-left: 10px;
    margin-left: -15px;
}
.view-section .fancytree-has-children span.fancytree-title::before {
    content: none;
    position: relative;
    top: 0;
}

.view-section .fancytree-container .fancytree-active .fancytree-title,
.view-section .fancytree-container .fancytree-selected .fancytree-title {
    color: #000;
}
.view-section .fancytree-container .fancytree-active.fancytree-has-children .fancytree-title::before,
.view-section .fancytree-container .fancytree-selected.fancytree-has-children .fancytree-title::before {
    content: none;
    text-shadow: none;
    display: none;
}
.view-section .fancytree-container .fancytree-active .fancytree-title::before,
.view-section .fancytree-container .fancytree-selected .fancytree-title::before {
    background: #888;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.view-section .fancytree-container .glyphicon {
    color: #666;
    font-family: 'Glyphicons Halflings';
    font-size: 15px;
    margin-right: 12px;
    position: relative;
    top: 4px;
}
.view-section .fancytree-container .fancytree-node:hover > .glyphicon {
    color: #888;
}
.view-section .fancytree-container .fancytree-node.fancytree-active:active > .glyphicon,
.view-section .fancytree-container .fancytree-node.fancytree-active .glyphicon,
.view-section .fancytree-container .fancytree-node.fancytree-selected:active > .glyphicon,
.view-section .fancytree-container .fancytree-node.fancytree-selected .glyphicon {
    color: #666;
    background: transparent;
}
/*--- hihglight search text ---*/
/*.view-section span.fancytree-title > em,
.view-section mark {
    color: #ff0;
    font-style: normal;
    padding: 0;
    background: transparent;
}
*/
/*---- END treeview -----*/



/* ----- overlay timer ------ */
/* ----- search loading ----- */
#search-flyout .overlay-mask{ position:absolute;z-index:15000;}

@-moz-keyframes rotate-loading {
    0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
    100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
}
@-o-keyframes rotate-loading {
    0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
    100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
}
@-webkit-keyframes rotate-loading {
    0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
    100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
}
@keyframes rotate-loading {
    0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
    100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
}
@-moz-keyframes loading-text-opacity {
    0%  {opacity: 0}
    20% {opacity: 0}
    50% {opacity: 1}
    100%{opacity: 0}
}
@-o-keyframes loading-text-opacity {
    0%  {opacity: 0}
    20% {opacity: 0}
    50% {opacity: 1}
    100%{opacity: 0}
}
@-webkit-keyframes loading-text-opacity {
    0%  {opacity: 0}
    20% {opacity: 0}
    50% {opacity: 1}
    100%{opacity: 0}
}
@keyframes loading-text-opacity {
    0%  {opacity: 0}
    20% {opacity: 0}
    50% {opacity: 1}
    100%{opacity: 0}
}
.loading-container,
.loading {
    height: 150px;
    position: relative;
    width: 150px;
    border-radius: 100%;
    z-index:16000;
}
 
.loading-container { margin: -180px auto 0; top:15rem;}
/* ... */

